bk_ida/sjengida/g3/is_attacked
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/is_attacked/src/attacks.c:669:6: error: use of undeclared identifier 'bishop_o_7'
v4 = bishop_o_7[v3]; 
     ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/is_attacked/src/attacks.c:731:16: error: use of undeclared identifier 'rook_o_8'
v9 = ( void **)rook_o_8; 
               ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/is_attacked/src/attacks.c:777:12: error: use of undeclared identifier 'jpt_403A6C'
if ( v9 == jpt_403A6C ) 
           ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/is_attacked/src/attacks.c:786:7: error: use of undeclared identifier 'bishop_o_7'
v17 = bishop_o_7[v3]; 
      ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/is_attacked/src/attacks.c:848:17: error: use of undeclared identifier 'rook_o_8'
v21 = ( void **)rook_o_8; 
                ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/is_attacked/src/attacks.c:894:6: error: use of undeclared identifier 'jpt_403A6C'
if ( jpt_403A6C == v21 ) 
     ^
6 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/is_attacked/src/obj/attacks.o] Error 1
